objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>RFQ</fullName>
        <description>Request for Quote Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SCQuickSetup__Mater</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Support Process</fullName>
        <description>Support process used by all case record types.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <description>The Date this RFQ was accepted</description>
        <inlineHelpText>What is the Date you agreed to respond to this RFQ?</inlineHelpText>
        <label>Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates this RFQ has been Accepted and will be responded to.</description>
        <inlineHelpText>Do you plan to respond to this RFQ ?</inlineHelpText>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSAT__c</fullName>
        <description>Added specifically for use by the Service Wave Analytics dashboard.</description>
        <label>CSAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseTimer19__Cumulative_Time__c</fullName>
        <label>Cumulative Time (Seconds)</label>
        <summarizedField>CaseTimer19__Session_Time__c.CaseTimer19__Duration__c</summarizedField>
        <summaryForeignKey>CaseTimer19__Session_Time__c.CaseTimer19__Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Survey_URL__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_320, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_320) -1) + &apos;/apex/DE_CustomerSurvey&apos;</formula>
        <label>Case Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Origin, 
&quot;Phone&quot;, &quot;015Hr000003iKAM&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Email&quot;, &quot;015Hr000003iKAN&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Chat&quot;, &quot;015Hr000003iKAO&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Website&quot;, &quot;015Hr000003iKAP&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Community&quot;, &quot;015Hr000003iKAQ&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Mobile Device&quot;, &quot;015Hr000003iKAR&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Q&amp;A&quot;, &quot;015Hr000003iKAQ&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Facebook&quot;, &quot;015Hr000003iKAS&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Twitter&quot;, &quot;015Hr000003iKAT&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Google&quot;, &quot;015Hr000003iKAU&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Sina Weibo&quot;, &quot;015Hr000003iKAV&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Portal&quot;, &quot;015Hr000003iKAQ&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Instagram&quot;, &quot;015Hr000003iKAW&amp;oid=&quot;&amp;$Organization.Id, 
&quot;LinkedIn&quot;, &quot;015Hr000003iKAX&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Salesforce IoT&quot;, &quot;015Hr000003iKAY&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Text Session&quot;, &quot;015Hr000003iKAZ&amp;oid=&quot;&amp;$Organization.Id, 

&quot;015Hr000003iKAM&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatKey__c</fullName>
        <description>Einstein Chatbot uses this to store LiveAgentSessId and is also referenced by trigger on Live Chat Transcript records.</description>
        <label>ChatKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Community_Contact_Match__c</fullName>
        <formula>ContactId = $User.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Contact Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concerned_quantity__c</fullName>
        <label>Concerned quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>Case ( Origin, &apos;Phone&apos;, 3.5, &apos;Chat&apos;, 2, &apos;Email&apos;, 2, &apos;Website&apos;, 1.5, &apos;Portal&apos;, 1.5, &apos;Chatter Answer&apos;, 1.2, 1.75)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cumulative_Time__c</fullName>
        <label>Cumulative Time (Seconds)</label>
        <summarizedField>Session_Time__c.Duration__c</summarizedField>
        <summaryForeignKey>Session_Time__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Small and Medium Business</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Case_Duration_Hours__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>DB Case Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Hours__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>DB Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed_c__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Opened_c__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>What is the Due Date for this Request ?</description>
        <inlineHelpText>Please enter the Due Date of this Request for Quote</inlineHelpText>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>8*(IF( ISNULL( DateTime_Closed_c__c  ), NOW() -  DateTime_Opened_c__c ,  DateTime_Closed_c__c  -  DateTime_Opened_c__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Description__c</fullName>
        <label>Old Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Subject__c</fullName>
        <label>Old Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Leading_Causes__c</fullName>
        <label>ED Leading Causes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ED_Outcome__c</fullName>
        <label>ED Predicted CSAT</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Prescription__c</fullName>
        <label>ED Prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Est_Cost__c</fullName>
        <description>Estimated cost to perform the service tasks.</description>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Contact_Close__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to mark cases that are closed on first contact, without requiring additional engagement with the customer.  Off by default.  Driven by workflow rule.</description>
        <label>First Contact Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KB_Article_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when there is a KB Article attached to the Case.</description>
        <inlineHelpText>Checked when there is a KB Article attached to the Case.</inlineHelpText>
        <label>KB Article Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFG_Service_Article_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Helper field for KCS Create Article flow and Next Best Action recommendation. Flag set to True during the KCS Create Article flow, and referenced in the Simple NBA strategy to determine whether or not to offer up the Create Article recommendation.</description>
        <inlineHelpText>Article created using the Create Article flow through either the dynamic button or the Next Best Action recommendation</inlineHelpText>
        <label>Article Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFG_Service_Close_Summary__c</fullName>
        <description>What: Short summary of actions taken to resolve the Case. Used in KCS Flows</description>
        <inlineHelpText>Short summary of actions taken to resolve the Case.</inlineHelpText>
        <label>Close Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MFG_Service_Sub_Type__c</fullName>
        <description>What: Used in KCS Flows</description>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Setup and Usage</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Order or Invoice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MilestoneStatus__c</fullName>
        <label>Milestone Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBA_to_Display__c</fullName>
        <label>NBA to Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Voucher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpenGraph_Image__c</fullName>
        <label>OpenGraph Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenGraph_Type__c</fullName>
        <label>OpenGraph Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenGraph_Url__c</fullName>
        <label>OpenGraph Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Cust_Case_ID__c</fullName>
        <label>Org Cust Case ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_KB__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial_Products</fullName>
                    <label>Commercial Products</label>
                </value>
                <value>
                    <fullName>Residential Products</fullName>
                </value>
                <value>
                    <fullName>Generators</fullName>
                </value>
                <value>
                    <fullName>Skid Steer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Model__c</fullName>
        <label>Product Model</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Score__c</fullName>
        <description>This field is used by the &quot;Quality Score by Agent&quot; component on the Service Executive Dashboard.  It indicates the &quot;quality&quot;--typically a post-call assessment by supervisor or quality-control personnel--that has been awarded to a case.  This is a number field, manually updated, but it could be accessed by a quality control system.</description>
        <label>Quality Score</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time_mins__c</fullName>
        <label>Response Time (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__chatKey__c</fullName>
        <label>chatKey</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Compliant__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used by the &quot;SLA Compliance&quot; dashboard on the Service Executive dashboard.  It is checked by default, and unchecked when a case misses a milestone.</description>
        <label>SLA Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Type__c</fullName>
        <description>Created for use by Service Wave to segment cases by SLA.  Entitlements field now accessible to Wave.</description>
        <label>SLA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Email_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_FieldService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Field Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status, 
&quot;New&quot;, &quot;015Hr000003iK9c&amp;oid=00DHr0000010MFf&quot;, 
&quot;Working&quot;,&quot;015Hr000003iK9d&amp;oid=00DHr0000010MFf&quot;,
&quot;Waiting on customer&quot;, &quot;015Hr000003iK9e&amp;oid=00DHr0000010MFf&quot;,
&quot;Response Received&quot;,&quot;015Hr000003iK9f&amp;oid=00DHr0000010MFf&quot;,
&quot;Escalated&quot;, &quot;015Hr000003iK9g&amp;oid=00DHr0000010MFf&quot;, 
&quot;Warning&quot;,&quot;015Hr000003iK9h&amp;oid=00DHr0000010MFf&quot;,
&quot;Violation&quot;,&quot;015Hr000003iK9i&amp;oid=00DHr0000010MFf&quot;,
&quot;Closed in Portal&quot;, &quot;015Hr000003iK9j&amp;oid=00DHr0000010MFf&quot;,
&quot;Closed&quot;,&quot;015Hr000003iK9j&amp;oid=00DHr0000010MFf&quot;,
&quot;Closed - First Call&quot;, &quot;015Hr000003iK9j&amp;oid=00DHr0000010MFf&quot;,
&quot;Submitting Feature&quot;,&quot;015Hr000003iK9g&amp;oid=00DHr0000010MFf&quot;,
&quot;015Hr000003iK9c&amp;oid=00DHr0000010MFf&quot;),&quot;Status&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Setup and Usage</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Order or Invoice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <description>Used by Salesforce Surveys to create a link to a survey that can be sent out when the case is closed.</description>
        <label>Survey URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Open__c</fullName>
        <label>Time Open</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Support__c</fullName>
        <label>Type of Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <description>This field is to ensure that icons show up properly in Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Priority, 
&quot;Critical&quot;, &quot;015Hr000003iKA0&amp;oid=&quot;&amp;$Organization.Id, 
&quot;High&quot;, &quot;015Hr000003iKA1&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Medium&quot;, &quot;015Hr000003iKA2&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Low&quot;, &quot;015Hr000003iKA3&amp;oid=&quot;&amp;$Organization.Id, 
&quot;015Hr000003iKA3&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>This field is used by the &quot;Channel History&quot; dashboard on the Service Executive dashboard.  It&apos;s a hidden field on the case that represents the number of cases for that time period.  This is because there are not enough cases in the SDO to make a compelling historical dashboard.  It is manually updated, and tied to no workflow rules.</description>
        <label>Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ckz_Budget_Approval_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Approval Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ckz_Budget_Approval_Status__c</fullName>
        <label>Budget Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ckz_Budget_Override_Amount__c</fullName>
        <label>Budget Override Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ckz_Credit_Override_Amount__c</fullName>
        <label>Credit Override Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ckz_Credit_Override_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Override Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ckz_Credit_Override_Status__c</fullName>
        <label>Credit Override Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ckz_Source_Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Cart</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>demoRecommendations__c</fullName>
        <label>demoRecommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>deviceId__c</fullName>
        <externalId>true</externalId>
        <label>deviceId</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Case</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>Billing_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Sub_Type__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Type__c</field>
            <operation>equals</operation>
            <value>Billing</value>
        </filters>
        <label>Billing Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>SupportAgents</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MFG_RFQ_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.RFQ</value>
        </filters>
        <label>RFQ Requests</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Cases_Community</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community_Contact_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Community Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SRM_Cases</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>corrective action</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>change request</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>order delay</value>
        </filters>
        <label>SRM Cases</label>
    </listViews>
    <listViews>
        <fullName>Tier_2_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Tier 2 Queue</label>
        <language>en_US</language>
        <queue>Tier2Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Case</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <description>Primary case record type used for most cases.</description>
        <label>Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chat_Case</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <description>Used specifically for Chat cases to drive the chat-specific page layout.</description>
        <label>Chat Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Digital_Engagement_Social_Case</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <label>Digital Engagement - Social Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFQ</fullName>
        <active>true</active>
        <businessProcess>RFQ</businessProcess>
        <description>Request for Quote Record Type</description>
        <label>RFQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>RMA</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <description>Order Return (RMA)</description>
        <label>RMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>SCQuickSetup__Chat_Live_Agent</fullName>
        <active>false</active>
        <businessProcess>SCQuickSetup__Mater</businessProcess>
        <label>Chat Live Agent</label>
    </recordTypes>
    <recordTypes>
        <fullName>SCQuickSetup__SOS_Recodr</fullName>
        <active>false</active>
        <businessProcess>SCQuickSetup__Mater</businessProcess>
        <label>SOS Recodr</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>